- P4A_Sheet's error messages were beautified
- P4A_Thumbnail_Generator now supports transparent GIF/PNG
- P4A_Thumbnail_Generator now outputs a PNG cache file if a PNG
  original file was provided
- P4A_Thumbnail_Generator now outputs a GIF cache file if a GIF
  original file was provided
- P4A_Thumbnail_Generator now resamples JPG/PNG instead of just
  resizing them

3.0.3
- P4A_Thumbnail_Generator now supports ie's pjpeg extension
- a bug with P4A_I18N::_format() method was solved
  (YYYY was changed to yyyy)
- P4A_Field::setYearRange() method was added to be able to
  manage the year range in the datepicker
- 10px top padding was added to P4A_Fieldset
- jQuery::maskedinput 1.1.4 plugin was added
- P4A_Field::setInputMask() and getInputMask() methods were added,
  check the code reference for usage
- popup template support for "top" zone was added
- P4A_Table's caption (label) is now automatically traslated at run time
- P4A now triggers the "ontranslate" event, you can intercept it
  (getting string/translation/istranslated parameters) to track
  translations while developing your application
- a bug with P4A_Table's label with IE6 was fixed
- P4A_Table's navigation bar's "go to page" label's CSS was changed
  so now it will remain on a single line
- a typo in P4A_DB_Source documentation was fixed
- a PHP warning was fixed in P4A_DB_Navigator
- more info were added in products_catalogue's index.php file
- P4A_Mask::setRequiredField() and unsetRequiredField() methods
  now check if the field exists before calling the addValidator()
  otherwise show an error message

3.0.2
- a small change was done on P4A_Array_Source to enable the usage of empty
  array_sources without warnings
- tooltips are now automatically translated at rendering time
- P4A_DB_Source::saveRow() now reads pk values back from
  Zend_DB_Table::insert() gaining better functionality with
  auto increment primary keys
- jQuery UI was updated to 1.5.2