@@ -10,6 +10,7 @@
   original file was provided
 - P4A_Thumbnail_Generator now resamples JPG/PNG instead of just
   resizing them
+- a rendering bug with P4A_Field (when set as label) was fixed
 
 3.0.3
 - P4A_Thumbnail_Generator now supports ie's pjpeg extension
